@@ -2,5 +2,8 @@ exec rm -rf tmp
 exec mkdir tmp
 exec touch tmp/file
 exec ln -s file tmp/LINK
-find_start p {tmp/LINK  -printf "RESULT: %y %Y %p\n" -printf "RESULT2: %Y %y %p\n" }
+exec ln -s ENOENT tmp/DANGLE
+exec ln -s SELF tmp/SELF
+exec ls -ls tmp
+find_start p {tmp/LINK tmp/DANGLE tmp/SELF -printf "RESULT: %y %Y %p\n" -printf "RESULT2: %Y %y %p\n" }
 exec rm -rf tmp
