@@ -1,2 +1,6 @@
 RESULT: l f tmp/LINK
 RESULT2: f l tmp/LINK
+RESULT: l N tmp/DANGLE
+RESULT2: N l tmp/DANGLE
+RESULT: l L tmp/SELF
+RESULT2: L l tmp/SELF
